<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.eunicefrimponmaa.droidcafepart1.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
         android:id="@+id/action_contact"
         android:title="@string/action_contact"
        android:orderInCategory="100"
        android:icon="@drawable/ic_contact_white"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="always"
        android:icon="@drawable/ic_order_white"/>
    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="always"
        android:icon="@drawable/ic_status_white"
        />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="40"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite_white"
        />


    </menu>

