<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/intro_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="@string/into_text"
                android:textSize="@dimen/text_heading" />

            <TextView
                android:id="@+id/choose_dessert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/intro_text"
                android:padding="@dimen/padding_regular"
                android:text="@string/choose_a_dessert"
                android:textSize="@dimen/text_heading" />

            <ImageView
                android:id="@+id/donut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/choose_dessert"
                android:contentDescription="@string/donuts"
                android:onClick="showDonutOrder"
                android:padding="@dimen/padding_regular"
                android:src="@drawable/donut_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/choose_dessert"
                android:layout_toRightOf="@id/choose_dessert"
                android:padding="@dimen/padding_wide"
                android:text="@string/donut" />

            <ImageView
                android:id="@+id/icecream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/donut"
                android:contentDescription="@string/ice_creame_sandwiches"
                android:onClick="showIceCreamOrder"
                android:padding="@dimen/padding_regular"
                android:src="@drawable/icecream_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/choose_dessert"
                android:layout_toRightOf="@id/icecream"
                android:padding="@dimen/padding_wide"
                android:text="@string/ice_creame_sandwiches" />

            <ImageView
                android:id="@+id/froyo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/icecream"
                android:contentDescription="@string/froyo"
                android:onClick="showFroyoOrder"
                android:padding="@dimen/padding_regular"
                android:src="@drawable/froyo_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/icecream"
                android:layout_toRightOf="@id/froyo"
                android:padding="@dimen/padding_wide"
                android:text="@string/froyo" />

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>